testdata/baselines/reference/submodule/conformance/override_js1.errors.txt
a.js(6,17): error TS8010: Type annotations can only be used in TypeScript files.


==== a.js (1 errors) ====
    class B {
        foo (v) {}
        fooo (v) {}
    }
    
    class D extends B {
                    ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        foo (v) {}
        /** @override */
        fooo (v) {}
        /** @override */
        bar(v) {}
    }
    
    class C {
        foo () {}
        /** @override */
        fooo (v) {}
        /** @override */
        bar(v) {}
    }